Bug 1705519 - Make `Document::ExecCommand` not stop handling `selectall` command when there is no editable content r=smaug

When `document.execCommand("selectall")` is called, it should behave exactly
same as "Select All" in the UI for compatibility with the other browsers.

And also this patch fixes a bug of the WPT.  `selectionchange` event should
be fired, but asynchronously.  Therefore, Chrome also fails the check.

Differential Revision: https://phabricator.services.mozilla.com/D112307